// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index.astro > should render all CTypes 1`] = `
<body>
  <header>
    <h2><a href="/">CTypeHub</a></h2>
  </header>

  <search>
    <form action="/" method="get" class="_container">
      <input type="search" name="query" placeholder="Search query" aria-label="Search query" class="_search _component" /><button type="submit">Search</button>
    </form>

    <ul>
      <li class="_container">
        <h2 class="title">
          <a class="link" href="/ctype/kilt:ctype:0x1"> Example CType </a>
        </h2>
      </li>
      <li class="_container">
        <h2 class="title">
          <a class="link" href="/ctype/kilt:ctype:0x2">
            Example nested CType property
          </a>
        </h2>
      </li>
    </ul>
  </search>
</body>
`;

exports[`index.astro > should render search results 1`] = `
<body>
  <header>
    <h2><a href="/">CTypeHub</a></h2>
  </header>

  <search>
    <form action="/" method="get" class="_container">
      <input type="search" name="query" value="nested" placeholder="Search query" aria-label="Search query" autofocus class="_search _component" /><button type="submit">Search</button>
    </form>

    <ul>
      <li class="_container">
        <h2 class="title">
          <a class="link" href="/ctype/kilt:ctype:0x2">
            Example nested CType property
          </a>
        </h2>
      </li>
    </ul>
  </search>
</body>
`;

exports[`index.astro > should render when no search results 1`] = `
<body>
  <header>
    <h2><a href="/">CTypeHub</a></h2>
  </header>

  <search>
    <form action="/" method="get" class="_container">
      <input type="search" name="query" value="asdagalasdg" placeholder="Search query" aria-label="Search query" autofocus class="_search _component" /><button type="submit">Search</button>
    </form>

    <p>No results for &quot;asdagalasdg&quot;</p>
  </search>
</body>
`;
